# cc-nim

./: .env.example  .gitignore  :memory:  CLAUDE.md  README.md  VOICE_CONTEXT_BUG_REPORT.md  pyproject.toml  server.py  test_whisper.py
api/: app.py
config/: __init__.py  settings.py
docs/: voice-messages.md
docs/plans/: 2025-02-04-telegram-voice-transcription-plan.md  2026-02-04-voice-message-context-detection.md
messaging/: handler.py  limiter.py  models.py  rate_limited_platform.py  session.py  telegram.py  voice_processor.py
services/: __init__.py  telegram_audio.py  transcription.py
tests/: verify_limiter_v2.py
tests/messaging/: test_models.py  test_voice_context_bug.py  test_voice_processor.py
tests/services/: test_telegram_audio.py  test_transcription.py
